Fix for tabs having 1 pixel separation from the subniav on IE & Chrome. I think the centering algorithm is slightly different for FF. The logo is also sretched vertically on IE, but I have no idea why it is using the wrong height.

--- a/src/gwt/public/frame/frame.css
+++ b/src/gwt/public/frame/frame.css
@@ -39,7 +39,7 @@
   font-weight: bold;
   background: url(/images/header/navi_button_bg.png) no-repeat;
   height: 20px;
-  margin: 26px 5px 0 0;
+  margin: 27px 5px 0 0;
   padding-top: 3px;
   text-align: center;
   color: #0D496D;
